--- a/web/static/css/_forms.scss
+++ b/web/static/css/_forms.scss
@@ -8,11 +8,14 @@ input, textarea {
   @include input-element();
 
   background-color: white;
+  border-radius: 5px;
   border: none;
+  border-color: $primary;
   box-shadow: inset 0 0 0 1px $light-graphite;
   color: inherit;
   resize: none;
   width: 100%;
+  height: 3em;
 }
 
 .checkbox {
@@ -33,7 +36,7 @@ input:focus, textarea:focus {
   @include input-element();
   @include transition(background-color 75ms ease-in-out);
 
-  border-radius: 3px;
+  border-radius: 5px;
   border: none;
   color: #fff;
   cursor: pointer;
@@ -43,6 +46,7 @@ input:focus, textarea:focus {
   padding-right: 1em;
   text-align: center;
   width: 100%;
+  height: 3em;
 
   &:focus {
     outline: none;
@@ -60,4 +64,12 @@ input:focus, textarea:focus {
 
 a.button:hover {
   text-decoration: none;
+}
+
+.form-group {
+  padding: 10px 0px;
+}
+
+.form-block {
+  margin-bottom: 15px;
 }
