--- a/web/static/css/_forms.scss
+++ b/web/static/css/_forms.scss
@@ -4,7 +4,7 @@
   padding: 0.1em 0.7em;
 }
 
-input, textarea {
+input[type=text] {
   @include input-element();
 
   background-color: white;
@@ -29,7 +29,6 @@ input:focus, textarea:focus {
 
 .form-group {
   margin-bottom: $line-height;
-  margin-top: $line-height;
 }
 
 .button {
@@ -47,6 +46,7 @@ input:focus, textarea:focus {
   text-align: center;
   width: 100%;
   height: 3em;
+  line-height: 3em;
 
   &:focus {
     outline: none;
@@ -57,6 +57,15 @@ input:focus, textarea:focus {
 
     &:hover {
       background: darken($primary, 5%);
+      cursor: hand;
+    }
+  }
+
+  &--secondary {
+    background: $secondary;
+
+    &:hover {
+      background: darken($secondary, 5%);
       cursor: hand;
     }
   }
